@@ -1,0 +1,3 @@
+ALTER TABLE register ADD KEY `to_domain` (`to_domain`), ADD KEY `to_num` (`to_num`);
+ALTER TABLE register_state ADD `to_domain` varchar(255) NULL DEFAULT NULL;
+ALTER TABLE register_failed ADD `to_domain` varchar(255) NULL DEFAULT NULL;
